--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>
     Imersão Dev - Aula 03
   </title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
   <a href="https://alura.com.br/" target="_blank">
     <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
   </a>
-  <script src="app.js"></script>
+  <script  src="./script.js"></script>
 </body>
 
 </html>
